[gd_scene load_steps=4 format=3 uid="uid://cwwaitliqbm1r"]

[ext_resource type="FontFile" uid="uid://bgdrs10x0o12h" path="res://assets/fonts/AnglicanText.ttf" id="1_m1ibt"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_w11xg"]
[ext_resource type="FontFile" uid="uid://b848qq7fibpty" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="2_bph5r"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_w11xg")

[node name="Label" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -227.5
offset_right = 227.5
offset_bottom = 258.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_m1ibt")
theme_override_font_sizes/font_size = 200
text = "Paused"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1259.0
offset_top = -465.0
offset_right = 1672.0
offset_bottom = 888.0
color = Color(0, 0, 0, 0.505882)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -52.0
offset_right = 180.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_bph5r")
text = "Continue"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_bph5r")
text = "Menu"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
